vlib/v/checker/tests/type_alias_decl_anon_struct_invalid_embed.out
vlib/v/checker/tests/type_alias_decl_anon_struct_invalid_embed.vv:2:16: error: cannot embed non-struct `Int`
    1 | type Int = int
    2 | type MyIndex = struct {
      |                ~~~~~~~~
    3 |     Int
    4 | }
vlib/v/checker/tests/type_alias_decl_anon_struct_invalid_embed.vv:3:2: error: cannot embed non-struct `Int`
    1 | type Int = int
    2 | type MyIndex = struct {
    3 |     Int
      |     ~~~
    4 | }
