vlib/v/checker/tests/type_alias_decl_anon_struct_invalid_embed.vv
type Int = int
type MyIndex = struct {
	Int
}
